[package]
name = "fil-sapling-crypto"

authors = ["Sean Bowe <sean@z.cash>"]
description = "Cryptographic library for Zcash Sapling"
documentation = "https://github.com/zcash-hackworks/sapling"
homepage = "https://github.com/filecoin-project/sapling-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/sapling-crypto"
version = "0.1.2"
edition = "2018"

[dependencies]
rand_core = "0.5"
rand = "0.7"
byteorder = "1"
ff = { version = "0.5.0", features = ["derive"] }
paired = { version = "0.15", git = "https://github.com/filecoin-project/pairing", branch = "update-from-upstream", features = ["expose-arith"] }
bellperson = { version = "0.3", git = "https://github.com/filecoin-project/bellman", branch = "update-from-upstream" }
blake2b_simd = "0.5"
blake2s_simd = "0.5"

[dev-dependencies]
digest = "0.8"
hex-literal = "0.2"
rust-crypto = "0.2"
rand_xorshift = "0.2.0"

[features]
default = []
gpu = ["bellperson/gpu"]
